c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/var_decl_bad_type_specifier.c
struct s;

// cannot combine struct keyword with other type specifier
struct s long a;

int main(void) {
    return 0;
}